--- a/bin/exma.ini
+++ b/bin/exma.ini
@@ -2,4 +2,5 @@ CROSS_AREA=26250#Cross sectional area of flow
 FLOW_RATE=11#Flow rate in microliters per hour
 PIXEL_WIDTH=0.1565983#Width of each pixel in micrometers
 LAYER_THICKNESS=1#Distance between layers in micrometers
-DIFFUSIVITY=1000#Diffusivity constant between two streams in micrometers squared per second
+DIFFUSIVITY=696#Diffusivity constant between two streams in micrometers squared per second (this value is Ciprofloxacin, 568 is colcin)
+CHAN_WIDTH=350#Width of channel in micrometers
